Fix one's spacing and add content to two

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,18 +34,20 @@ body{
     align-items: center;
     gap: 48px;
     background-color: #1F2937;
-    padding: 72px 240px;
+    padding: 96px 240px;
 }
 
 .one h1{
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
+    letter-spacing: 0;
+    margin-bottom: 12px;
 }
 
 .one p{
     font-size: 18px;
-    color: #E5e7eb   
+    color: #E5e7eb;
 }
 
 .left{
@@ -60,4 +62,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.one button{
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-size: 18px;
+    font-weight: 700;
+    border: none;
+    border-radius: 7px;
+    padding: 8px 24px;
 }
